# ai-recepcionist

./: .env.example  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  prompts_context.md  pyproject.toml  railway.toml  refactor-plan.md  requirements.txt
.agents/skills/logging-best-practices/: SKILL.md
.agents/skills/tools-refactor/: SKILL.md
app/: clients.py  config.py  context.py  dedup.py  dependencies.py  main.py  models.py  observability.py
app/agent/: base_toolset.py  calendar_tools.py  graph.py  padel_tools.py  prompts.py  registry.py  shared_tools.py  tools.py
app/agent/verticals/: calendar_booking.py  dentist.py  padel.py  retail.py
app/clients/: models.py  service.py
app/context/: redis.py
app/conversations/: models.py  service.py
app/integrations/: argentina.py  calendar.py  calendar_config.py  calendar_mock.py  dentist_sheets.py  mercadopago.py  padel_calendar.py  sheets.py  transcriber.py  whatsapp.py
app/webhook/: handler.py  mp_handler.py  mp_router.py  payload_parser.py  router.py
docs/: OTEL-REFACTOR.md  docs.md  tool-design.md
tests/: smoke_phase3.py  smoke_phase4.py  smoke_phase5.py  test_handler_observability.py  test_handler_steps.py  test_observability.py  test_sheets.py
