[project]
name = "ai-receptionist"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "langgraph>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.28.0",
    "supabase>=2.4.0",
    "upstash-redis>=1.1.0",
    "gspread>=6.1.0",
    "google-auth>=2.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.0.0",
    "logfire[fastapi,httpx,openai,redis]>=0.5.0",
    "sentry-sdk>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:No logs or spans will be created:UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
